<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:src="@drawable/icon_close"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"/>
    
    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/iv_close"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/icon_avatar_default"/>

    <TextView
        android:id="@+id/tv_nickName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="@id/iv_avatar"
        app:layout_constraintLeft_toRightOf="@id/iv_avatar"
        app:layout_constraintRight_toLeftOf="@id/tv_sign_in"
        app:layout_constraintBottom_toTopOf="@id/tv_badge"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/color_black_333333"
        android:text="方成熙"/>

    <TextView
        android:id="@+id/tv_badge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_nickName"
        app:layout_constraintLeft_toLeftOf="@id/tv_nickName"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:gravity="center"
        android:text="18个徽章"
        android:textColor="@color/color_white"
        android:textSize="10sp"
        android:background="@drawable/bg_user_badge"/>

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_avatar"
        app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
        android:drawableStart="@drawable/me_icon_redpack"
        android:textStyle="bold"
        android:layout_marginRight="16dp"
        android:drawablePadding="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/sign_in"
        android:textColor="@color/color_white"
        android:background="@drawable/shape_color_d7b077_radius_4"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_order"
        app:layout_constraintTop_toBottomOf="@id/iv_avatar"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        
        <ImageView
            android:id="@+id/iv_order"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:src="@drawable/icon_order"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/iv_order"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:textColor="@color/color_black_333333"
            android:gravity="center"
            android:text="@string/my_oder"/>
        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/icon_arrow_right"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"/>
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_driving_license"
        app:layout_constraintTop_toBottomOf="@id/cl_order"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/iv_driving_license"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:src="@drawable/icon_driving_license"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/iv_driving_license"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:textColor="@color/color_black_333333"
            android:gravity="center"
            android:text="@string/driving_license"/>
        <ImageView

            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/icon_arrow_right"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"/>


    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_coupons"
        app:layout_constraintTop_toBottomOf="@id/cl_driving_license"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/iv_coupons"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:src="@drawable/icon_coupons"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/iv_coupons"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:textColor="@color/color_black_333333"
            android:gravity="center"
            android:text="@string/coupons"/>

        <ImageView
            android:id="@+id/iv_arrow_coupons"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/icon_arrow_right"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/iv_arrow_coupons"
            android:textSize="14sp"
            android:textColor="@color/color_light_gray_999999"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="3张"/>
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_reward_point_mall"
        app:layout_constraintTop_toBottomOf="@id/cl_coupons"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/iv_reward_point_mall"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:src="@drawable/icon_reward_point_mall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/iv_reward_point_mall"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:textColor="@color/color_black_333333"
            android:gravity="center"
            android:text="@string/points_mall"/>

        <ImageView
            android:id="@+id/iv_arrow_mall"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/icon_arrow_right"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toLeftOf="@id/iv_arrow_mall"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/color_light_gray_999999"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="1,280积分"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_customer_service_center"
        app:layout_constraintTop_toBottomOf="@id/cl_reward_point_mall"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/iv_customer_service_center"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:src="@drawable/icon_service_center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/iv_customer_service_center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:textColor="@color/color_black_333333"
            android:gravity="center"
            android:text="@string/customer_service_center"/>

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/icon_arrow_right"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"/>
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_setting"
        app:layout_constraintTop_toBottomOf="@id/cl_customer_service_center"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/iv_setting"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:src="@drawable/icon_setting"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/iv_setting"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:textColor="@color/color_black_333333"
            android:gravity="center"
            android:text="@string/setting"/>

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@drawable/icon_arrow_right"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>